--- a/css/sass/components/_loader.scss
+++ b/css/sass/components/_loader.scss
@@ -28,5 +28,5 @@
 }
 
 @keyframes vanish {
-    100% { transform: translate(-1400px);}
+    100% { transform: scale(0);}
 }
