--- a/css/sass/pages/_menu-pages.scss
+++ b/css/sass/pages/_menu-pages.scss
@@ -55,12 +55,16 @@
     width: 360px;
     background-color: white;
     border-radius: 15px;
-    gap: 2px;
-    display: flex;
-    flex-direction: column;
-    @include desktop {
+
+    &__animation {
+        gap: 2px;
+        display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+    }
+
+    &__info {
+        display: flex;
+        flex-direction: column;
     }
 
     &__head {
